create functional etch-a-sketch with input

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <header>
             <button id="resetButton">Reset</button>
-            <input type="number">
+            <input type="number" id="sidecount" min="4" max="100">
+            <button id="sideNumber">Create</button>
         </header>
-        <div class="container">
+        <div class="container" id="container">
             <div class="cell"></div>
             <div class="cell"></div>
             <div class="cell"></div>
