Add maximum cell count and prompt

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <body>
         <header>
             <button id="resetButton">Reset</button>
-            <input type="number" id="sidecount" min="4" max="100">
-            <button id="sideNumber">Create</button>
+            <button id="sideNumberGet">Change Side Cell Number</button>
         </header>
         <div class="container" id="container">
             <div class="cell"></div>
